# chasse

./: .gitignore  CLAUDE.md  Cargo.toml  chasse.drawio  diesel.toml  flake.nix  justfile  notes.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: location_list.ts  main.ts  map.ts  style.css  types.ts
migrations/2025-08-07-020505_create_marker_locations/: down.sql  up.sql
migrations/2025-08-07-031155_add_simple_examples/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: locations.html
