[package]
name = "chasse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tower-http = { version = "0.6.0", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
geoutils = {version = "0.5.1", features = ["serde"]}
tokio = { version = "1.47.1", features = ["full"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
